--- a/Hach.Library/Hach.Library/Hach.Library.csproj
+++ b/Hach.Library/Hach.Library/Hach.Library.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,20 +50,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\RequestParameter\KeyValueAttribute.cs" />
+    <Compile Include="Attributes\RequestParameter\UrlPathAttribute.cs" />
     <Compile Include="Configuration\Reader\Settings.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Extensions\UriExtension.cs" />
+    <Compile Include="Labels\Labels.cs" />
+    <Compile Include="Models\Base\ICacheModel.cs" />
+    <Compile Include="Models\Base\IModel.cs" />
+    <Compile Include="Models\Base\Implementations\CacheModel.cs" />
+    <Compile Include="Models\Base\IValidity.cs" />
+    <Compile Include="Models\Static\CachedRequestResults.cs" />
+    <Compile Include="Models\Static\InMemoryDataStructure.cs" />
+    <Compile Include="Models\Thread\ExtendedThread.cs" />
+    <Compile Include="Models\Web\Geolocation\Geoobject.cs" />
+    <Compile Include="Models\Web\Geolocation\GoogleGeocodingModel.cs" />
+    <Compile Include="Models\Web\Geolocation\Parameters\Geolocation\ICircleQuery.cs" />
+    <Compile Include="Models\Web\Geolocation\Parameters\Geolocation\Implementation\CircleQuery.cs" />
+    <Compile Include="Models\Web\Geolocation\Parameters\Geolocation\IQuery.cs" />
     <Compile Include="Models\Web\Paging\PagingElement.cs" />
     <Compile Include="Models\Web\Paging\PagingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Implementation\ThreadRepository.cs" />
+    <Compile Include="Services\Caching\ICachingService.cs" />
+    <Compile Include="Services\Caching\Implementations\CachingService.cs" />
+    <Compile Include="Services\Facade\Implementations\PredefinedServiceFacade.cs" />
+    <Compile Include="Services\Facade\IPredefinedServiceFacade.cs" />
     <Compile Include="Services\Mapping\Base\IMappingService.cs" />
+    <Compile Include="Services\Mapping\Geolocation\IGeolocationMappingService.cs" />
+    <Compile Include="Services\Mapping\Geolocation\Implementations\GoogleGeolocationMappingService.cs" />
     <Compile Include="Services\Mapping\Json\IJsonMapperService.cs" />
     <Compile Include="Services\Mapping\Json\Implementations\JsonMapperService.cs" />
     <Compile Include="Services\Serialization\Base\ISerializationService.cs" />
     <Compile Include="Services\Serialization\Json\IJsonSerializationService.cs" />
     <Compile Include="Services\Serialization\Json\Implementations\JsonSerializationService.cs" />
+    <Compile Include="Services\Thread\Implementations\ThreadService.cs" />
+    <Compile Include="Services\Thread\IThreadService.cs" />
+    <Compile Include="Services\Web\Implementations\UrlRequestParameterService.cs" />
     <Compile Include="Services\Web\Implementations\PagingService.cs" />
+    <Compile Include="Services\Web\Implementations\RequestService.cs" />
     <Compile Include="Services\Web\IPagingService.cs" />
+    <Compile Include="Services\Web\IRequestParameterService.cs" />
+    <Compile Include="Services\Web\IRequestService.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
