--- a/Hach.Library/Hach.Library/Hach.Library.csproj
+++ b/Hach.Library/Hach.Library/Hach.Library.csproj
@@ -36,11 +36,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NLog.4.3.5\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\packages\NLog.4.3.5\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -69,6 +69,7 @@
     <Compile Include="Models\Base\IModel.cs" />
     <Compile Include="Models\Base\Implementations\CacheModel.cs" />
     <Compile Include="Models\Base\IValidity.cs" />
+    <Compile Include="Models\Mail\MailModel.cs" />
     <Compile Include="Models\MatchModel.cs" />
     <Compile Include="Models\MatchTypes.cs" />
     <Compile Include="Models\ScreenshotCompareModel.cs" />
@@ -84,6 +85,8 @@
     <Compile Include="Models\Web\Paging\PagingElement.cs" />
     <Compile Include="Models\Web\Paging\PagingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IMailRepository.cs" />
+    <Compile Include="Repositories\Implementation\MailRepository.cs" />
     <Compile Include="Repositories\Implementation\ThreadRepository.cs" />
     <Compile Include="Services\Caching\ICachingService.cs" />
     <Compile Include="Services\Caching\Implementations\CachingService.cs" />
@@ -99,6 +102,8 @@
     <Compile Include="Services\Facade\IPredefinedServiceFacade.cs" />
     <Compile Include="Services\Comparer\Text\ILongestCommonSubsequenceService.cs" />
     <Compile Include="Services\Comparer\Text\Implementation\LongestCommonSubsequenceService.cs" />
+    <Compile Include="Services\Mail\IMailService.cs" />
+    <Compile Include="Services\Mail\Implementations\SystemNetMail.cs" />
     <Compile Include="Services\Mapping\Base\IMappingService.cs" />
     <Compile Include="Services\Mapping\Geolocation\IGeolocationMappingService.cs" />
     <Compile Include="Services\Mapping\Geolocation\Implementations\GoogleGeolocationMappingService.cs" />
@@ -121,6 +126,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
+REM If you see this in Visual Studio's Error List window, check the Output window's Build tab for the actual error.
+ECHO Creating NuGet package in Post-Build event...
+PowerShell -NoProfile -ExecutionPolicy Bypass -Command "&amp; '$(ProjectDir)_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1' -ProjectFilePath '$(ProjectPath)' -OutputDirectory '$(TargetDir)' -BuildConfiguration '$(ConfigurationName)' -BuildPlatform '$(PlatformName)'"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
